Update copyright year and footer text

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Dr. Tasha "TMac" McCray | CompliTrst™</p>
+        <p>&copy; 2026 TMac Inspired™</p>
         <p>All Rights Reserved</p>
     </footer>
 </body>
