Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
     <section class="hero-section container">
         <div class="hero-image">
-            <img src="front_mockup.png" alt="Where Is My Life Partner Book Cover">
+            <img src="/front_mockup.png" alt="Where Is My Life Partner Book Cover">
         </div>
         <div class="hero-content">
             <h2>You have the success. You have the vision. Now, it's time for the partnership that matches your frequency.</h2>
@@ -589,7 +589,7 @@
         <div class="container">
             <div class="author-content">
                 <div class="author-image">
-                    <img src="back_cover_mockup.png" alt="Dr. Tasha TMac McCray">
+                    <img src="/back_cover_mockup.png" alt="Dr. Tasha TMac McCray">
                 </div>
                 <div class="author-bio">
                     <h2>Wealth on Your Terms. Love by Design.</h2>
