--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #1a4d3e 0%, #2d6b5a 100%);
+            background: linear-gradient(135deg, #1f4236 0%, #2d6b5a 100%);
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -76,7 +76,7 @@
 
         .hero-content h2 {
             font-size: 2.5em;
-            color: #1a4d3e;
+            color: #1f4236;
             margin-bottom: 30px;
             line-height: 1.3;
         }
@@ -94,7 +94,7 @@
 
         .questions-section h2 {
             font-size: 2.3em;
-            color: #1a4d3e;
+            color: #1f4236;
             text-align: center;
             margin-bottom: 50px;
         }
@@ -122,7 +122,7 @@
 
         .transformation-section h2 {
             font-size: 2.5em;
-            color: #1a4d3e;
+            color: #1f4236;
             text-align: center;
             margin-bottom: 30px;
         }
@@ -139,7 +139,7 @@
         }
 
         .highlight-box {
-            background: #1a4d3e;
+            background: #1f4236;
             color: white;
             padding: 40px;
             margin: 60px 0;
@@ -162,7 +162,7 @@
         }
 
         .system-section {
-            background: linear-gradient(135deg, #1a4d3e 0%, #2d6b5a 100%);
+            background: linear-gradient(135deg, #1f4236 0%, #2d6b5a 100%);
             color: white;
             padding: 80px 20px;
         }
@@ -236,7 +236,7 @@
 
         .author-bio h2 {
             font-size: 2.5em;
-            color: #1a4d3e;
+            color: #1f4236;
             margin-bottom: 30px;
         }
 
@@ -253,7 +253,7 @@
 
         .for-you-section h2 {
             font-size: 2.5em;
-            color: #1a4d3e;
+            color: #1f4236;
             text-align: center;
             margin-bottom: 50px;
         }
@@ -277,7 +277,7 @@
         }
 
         .cta-section {
-            background: linear-gradient(135deg, #1a4d3e 0%, #2d6b5a 100%);
+            background: linear-gradient(135deg, #1f4236 0%, #2d6b5a 100%);
             color: white;
             padding: 100px 20px;
             text-align: center;
@@ -303,7 +303,7 @@
         .cta-button {
             display: inline-block;
             background: linear-gradient(135deg, #c9a961 0%, #f4e4b8 50%, #c9a961 100%);
-            color: #1a4d3e;
+            color: #1f4236;
             padding: 25px 60px;
             font-size: 1.5em;
             text-decoration: none;
@@ -329,7 +329,7 @@
         .quote {
             font-size: 2.5em;
             font-style: italic;
-            color: #1a4d3e;
+            color: #1f4236;
             max-width: 800px;
             margin: 0 auto 30px;
             line-height: 1.5;
@@ -345,7 +345,7 @@
         }
 
         footer {
-            background: #1a4d3e;
+            background: #1f4236;
             color: white;
             padding: 40px 20px;
             text-align: center;
