Add favicon and apple-touch-icon links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where Is My Life Partner? - The Manifestation Edition</title>
+    <link rel="icon" type="image/png" href="/tmac-logo.png">
+    <link rel="apple-touch-icon" href="/tmac-logo.png">
     <style>
         * {
             margin: 0;
