Update header and hero section content in index.html

--- a/index.html
+++ b/index.html
@@ -519,9 +519,8 @@
 </head>
 <body>
     <header class="header">
-        <h1>WHERE IS MY LIFE PARTNER?</h1>
-        <div class="subtitle">The Manifestation Edition</div>
-        <div class="tagline">The One Thing Your Success Hasn't Solved</div>
+        <h1>You can have it all.</h1>
+        <div class="tagline">TMac Inspired shows you how.</div>
     </header>
 
     <section class="hero-section container">
@@ -529,7 +528,8 @@
             <img src="front_mockup.png" alt="Where Is My Life Partner Book Cover">
         </div>
         <div class="hero-content">
-            <h2>You have the success. You have the vision. Now, it's time for the partnership that matches your frequency.</h2>
+            <h2>Where Is My Life Partner? The Manifestation Edition</h2>
+            <p><em>A Woman's Guide to Attracting Her Soulmate</em></p>
             <p>You are a leader, a visionary, and a woman of profound faith. You've built a life that looks complete on paper, yet there is a specific void that accolades haven't been able to fill.</p>
             <p>You are the "Strong One," the "Boss," and the problem solver for everyone in your circle, but you are ready to be the woman who is cherished and supported in her own home.</p>
         </div>
@@ -638,6 +638,7 @@
 
     <footer>
         <p>&copy; 2026 TMac Inspired™</p>
+        <p>Questions? <a href="mailto:support@tmacinspired.com" style="color: #c9a961; text-decoration: none;">support@tmacinspired.com</a></p>
         <p>All Rights Reserved</p>
     </footer>
 </body>
