Revise hero and offering sections for clarity
Updated content to reflect a more empowering message for women and nurses, enhancing clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,6 @@
 
     <header class="hero container reveal">
         <h1 class="hero-statement">You can have it all.<br>TMac Inspired™ shows you how.</h1>
-        <div class="hero-sub">The pivot from bedside to legacy.</div>
     </header>
 
     <main class="container">
@@ -272,8 +271,8 @@
                 <div class="content-wrapper">
                     <h3>The Entry Point</h3>
                     <h2>Nurse Pivot Plan Starter Guide</h2>
-                    <p>Stop trading time for money. Begin the transition from bedside exhaustion to business ownership with our foundational blueprint.</p>
-                    <a href="nurse-pivot.html" class="btn">Get the Free Guide</a>
+                    <p>For nurses who are ready to move with clarity and structure, not more noise.</p>
+                    <a href="nurse-pivot.html" class="btn">Get Your Free Guide</a>
                 </div>
             </section>
 
@@ -284,8 +283,9 @@
                 <div class="content-wrapper">
                     <h3>The Acceleration</h3>
                     <h2>Slay Your Shift</h2>
-                    <p>A 5-day execution experience designed to shift your mindset and your tax bracket. Join the next cohort February 23-27, 2026.</p>
-                    <a href="slay-your-shift.html" class="btn">Join the Sprint</a>
+                    <p>The live, 5-day execution experience for nurses ready to swap burnout for a profitable business they love.
+            We move with clarity, structure, and real support, not more theory. Join the next shift February 23-27, 2026.</p>
+                    <a href="slay-your-shift.html" class="btn">Join the Shift</a>
                 </div>
             </section>
 
@@ -308,7 +308,7 @@
                 <div class="content-wrapper">
                     <h3>The Membership</h3>
                     <h2>The Tee Elite Circle</h2>
-                    <p>Where elite women build empire. Access the network, the mindset, and the "greens" where business is truly conducted.</p>
+                    <p>Not a league. A lifestyle. Among women who've already built. Now, you play.</p>
                     <a href="https://tmacmastermind.com" class="btn btn-gold">Explore the Circle</a>
                 </div>
             </section>
@@ -319,8 +319,8 @@
     <section class="section-padding tee-room-section reveal">
         <div class="container">
             <h3>The Content</h3>
-            <h2 style="font-size: 1.8rem;">Weekly Insights for Women Building Legacy</h2>
-            <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room for high-level conversation.</p>
+            <h2 style="font-size: 1.8rem;">Daily permission for women who are ready to stop negotiating with the life they want.</h2>
+            <p style="margin: 0 auto 2rem auto;">Enter the Tee Elite Room where accomplished women get permission to play their own game.</p>
             <a href="https://tmacmastermind.com/tee-room" style="border-bottom: 1px solid var(--pine);">Read the Latest</a>
         </div>
     </section>
