Replace JPG images with PNG versions in index.html

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
             <section class="offering-row reveal">
                 <div class="image-wrapper">
-                    <img src="tmac-working.jpg" alt="TMac working elegantly at a desk" loading="lazy">
+                    <img src="tmac-working.png" alt="TMac working elegantly at a desk" loading="lazy">
                 </div>
                 <div class="content-wrapper">
                     <h3>The Entry Point</h3>
@@ -278,13 +278,13 @@
 
             <section class="offering-row reveal">
                 <div class="image-wrapper">
-                    <img src="from-bedside-to-business.jpg" alt="TMac speaking on stage" loading="lazy">
+                    <img src="from-bedside-to-business.png" alt="TMac speaking on stage" loading="lazy">
                 </div>
                 <div class="content-wrapper">
                     <h3>The Acceleration</h3>
                     <h2>Slay Your Shift</h2>
                     <p>The live, 5-day execution experience for nurses ready to swap burnout for a profitable business they love.
-            We move with clarity, structure, and real support, not more theory. Join the next shift February 23-27, 2026.</p>
+            Join the next shift February 23-27, 2026.</p>
                     <a href="slay-your-shift.html" class="btn">Join the Shift</a>
                 </div>
             </section>
@@ -303,7 +303,7 @@
 
             <section class="offering-row reveal">
                 <div class="image-wrapper">
-                    <img src="golfing.jpg" alt="TMac on the golf course" loading="lazy">
+                    <img src="golfing.png" alt="TMac on the golf course" loading="lazy">
                 </div>
                 <div class="content-wrapper">
                     <h3>The Membership</h3>
