--- a/index.html
+++ b/index.html
@@ -284,9 +284,10 @@ header.hero {
 </head>
 <body>
 
-    <nav class="reveal">
-        <div class="logo">TMac Inspired™</div>
-    </nav>
+    <div class="header-banner">
+    <img src="tmac-logo.png" alt="TMac Inspired Logo" class="logo">
+</div>
+
 
     <header class="hero container reveal">
         <h1 class="hero-statement">You can have it all.<br>TMac Inspired™ shows you how.</h1>
