--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -179,40 +179,40 @@
         
         <div class="day-item">
             <span class="day-label">Day 1</span>
-            <div class="day-title">The Identity Shift</div>
-            <p>Shedding the 'employee' skin. We align your mindset with the 7-figure woman you are becoming.</p>
+            <div class="day-title">Clarity</div>
+            <p>Define your unique value and business vision.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 2</span>
-            <div class="day-title">Business Architecture</div>
-            <p>What are you actually selling? We define your offer and your high-value skill set.</p>
+            <div class="day-title">Framework</div>
+            <p>Build your signature offer that sells.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 3</span>
-            <div class="day-title">The Manifestation Method</div>
-            <p>Neville Goddard for Business. Techniques to assume the feeling of the wish fulfilled in your empire.</p>
+            <div class="day-title">Audience</div>
+            <p>Identify and attract your ideal clients.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 4</span>
-            <div class="day-title">Strategic Visibility</div>
-            <p>How to be seen as the authority in your niche without the 'hustle' of social media burnout.</p>
+            <div class="day-title">Systems</div>
+            <p>Set up simple systems that scale without the 'hustle' of social media burnout.</p>
         </div>
 
         <div class="day-item">
             <span class="day-label">Day 5</span>
-            <div class="day-title">The Empire Blueprint</div>
-            <p>Your 90-day execution plan. You leave with clarity, not just 'inspiration'.</p>
+            <div class="day-title">Launch</div>
+            <p>Execute your first (or next) revenue-generating action.</p>
         </div>
 
         <h2 class="section-title" style="margin-top: 4rem;">What's Included</h2>
         <ul class="included-list">
             <li>5 Daily Execution Sprints <span class="value">Value $497</span></li>
-            <li>Mindset Mastery Workbook <span class="value">Value $97</span></li>
+            <li>Business Mastery Workbook <span class="value">Value $97</span></li>
             <li>Private Community Access <span class="value">Value $197</span></li>
-            <li>Lifetime Access to Recordings <span class="value">Value $297</span></li>
+            <li>Build Your Signature Digital Asset<span class="value">Value $697</span></li>
             <li style="font-weight: bold; border-top: 2px solid var(--pine);">TOTAL VALUE <span>$1,088</span></li>
         </ul>
 
