--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -171,7 +171,7 @@
     </header>
 
     <div class="wide-image-container">
-        <img src="from-bedside-to-business.jpg" alt="TMac Leading">
+        <img src="from-bedside-to-business.png" alt="TMac Leading">
     </div>
 
     <section class="container">
@@ -213,7 +213,7 @@
             <li>Business Mastery Workbook <span class="value">Value $97</span></li>
             <li>Private Community Access <span class="value">Value $197</span></li>
             <li>Build Your Signature Digital Asset<span class="value">Value $697</span></li>
-            <li style="font-weight: bold; border-top: 2px solid var(--pine);">TOTAL VALUE <span>$1,088</span></li>
+            <li style="font-weight: bold; border-top: 2px solid var(--pine);">TOTAL VALUE <span>$1,488</span></li>
         </ul>
 
         <div class="offer-box">
