--- a/nurse-pivot.html
+++ b/nurse-pivot.html
@@ -162,7 +162,7 @@
 
     <main class="container">
         <div class="image-side">
-            <img src="tmac-working.jpg" alt="TMac working">
+            <img src="tmac-working.png" alt="TMac working">
         </div>
 
         <div class="form-side">
