Update header with subtitle and date badge
Added subtitle and date badge to the header section.

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -165,9 +165,8 @@
     </div>
 
     <header class="hero container">
-        <span class="date-badge">Feb 23-27, 2026</span>
         <h1>From Bedside to Business:<br>Slay Your Shift</h1>
-        <p class="subtitle">5-day execution experience</p>
+        
     </header>
 
     <div class="wide-image-container">
@@ -175,6 +174,8 @@
     </div>
 
     <section class="container">
+        <p class="subtitle">The 5-day experience</p>
+        <span class="date-badge">Feb 23-27, 2026</span>
         <h2 class="section-title">The Curriculum</h2>
         
         <div class="day-item">
