Change button text from 'Join the Sprint' to 'Join the Shift'

--- a/slay-your-shift.html
+++ b/slay-your-shift.html
@@ -258,7 +258,7 @@
             <div class="offer-box">
                 <p class="price-label">Your Investment</p>
                 <div class="price">$147</div>
-                <a href="#" class="btn">Join the Sprint</a>
+                <a href="#" class="btn">Join the Shift</a>
             </div>
         </div>
     </section>
